--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,9 @@ dependencies:
   cloud_firestore: ^0.16.0
   firebase_storage: ^7.0.0
   firebase_core: ^0.7.0-nullsafety.1
-  provider: ^3.1.0
+  provider: ^4.0.0
   flutter_spinkit: "^4.0.0"
-  pull_to_refresh: 1.6.3
+  pull_to_refresh: ^2.0.0
   scroll_bottom_navigation_bar: ^3.0.0
   shared_preferences: ^0.5.12+4
   vibration: ^1.7.3
