--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
 
-  <application android:name="io.flutter.app.FlutterApplication" android:label="Versify" android:icon="@mipmap/versify_large">
+  <application android:name="io.flutter.app.FlutterApplication" android:label="Versify" android:icon="@mipmap/versify_logo_v2">
     <activity android:name=".MainActivity" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
       <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
@@ -31,7 +31,7 @@
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
         <category android:name="android.intent.category.DEFAULT" />
-        <category android:name="android.intent.category.BROWSABLE" />
+        <!-- <category android:name="android.intent.category.BROWSABLE" /> -->
         <data android:scheme="https" android:host="versify.wongoose.com" />
       </intent-filter>
 
