--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,5 +67,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-messaging'
 }
 apply plugin: 'com.google.gms.google-services'
