--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,32 +28,34 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  firebase_auth: ^0.20.0+1
-  google_sign_in: ^4.4.4
-  cloud_firestore: ^0.16.0
-  firebase_storage: ^7.0.0
-  firebase_core: ^0.7.0-nullsafety.1
-  provider: ^4.0.0
-  flutter_spinkit: "^4.0.0"
-  pull_to_refresh: ^2.0.0
-  scroll_bottom_navigation_bar: ^3.0.0
-  shared_preferences: ^0.5.12+4
+  cupertino_icons:
+  flutter_icons:
+  flutter_launcher_icons: 
+  flutter_spinkit: 
+  google_fonts:
+  google_sign_in: ^5.0.3
+  firebase_auth: ^1.2.0
+  cloud_firestore: ^2.2.0
+  firebase_storage: ^8.1.0
+  firebase_core: ^1.2.0
+  firebase_dynamic_links: ^2.0.4
+  firebase_messaging: ^10.0.0
+  provider: ^5.0.0
+  pull_to_refresh: ^2.0.0 
+  shared_preferences: ^2.0.5
   vibration: ^1.7.3
-  skeleton_loader: ^1.0.2+2
-  draggable_scrollbar: ^0.0.4
-  url_launcher: ^5.7.10
-  phone_number: ^0.8.1+1
-  intl_phone_number_input: ^0.6.0
-  http: ^0.12.0+2
-  xml: ^4.5.1
-  cached_network_image: ^2.5.1
-  flutter_icons: ^1.1.0
-  flutter_cache_manager:
-  firebase_dynamic_links: ^0.7.0+1
-  esys_flutter_share: ^1.0.2
-  google_fonts: ^1.1.2
-  flutter_launcher_icons: ^0.8.1
+  url_launcher: ^6.0.4
+  intl_phone_number_input: ^0.7.0+2
+  http: ^0.13.3
+  xml: ^5.1.0
+  cached_network_image: ^3.0.0
+  share: ^2.0.1
+  # esys_flutter_share: ^1.0.2
+  # scroll_bottom_navigation_bar: 
+  # skeleton_loader: 
+  # draggable_scrollbar: 
+  # phone_number: ^0.10.0
+  # flutter_cache_manager:
 
     
 
