--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -5,5 +5,7 @@
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <application android:usesCleartextTraffic="true"/>
+
    
 </manifest>
