--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   xml: ^5.1.0
   cached_network_image: ^3.0.0
   share: ^2.0.1
+  overlay_tutorial: ^2.0.1
   # esys_flutter_share: ^1.0.2
   # scroll_bottom_navigation_bar: 
   # skeleton_loader: 
