--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   overlay_tutorial: ^2.0.1
   shimmer_animation: ^2.0.0
   overlay_support: ^1.2.1
+  image_picker: ^0.8.0+3
   # esys_flutter_share: ^1.0.2
   # scroll_bottom_navigation_bar: 
   # skeleton_loader: 
