--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,10 +74,10 @@ dev_dependencies:
     sdk: flutter
   
 
-flutter_icons:
-  android: true
-  ios: true
-  image_path: "assets/images/versify_logo_v2.png"
+# flutter_icons:
+#   android: true
+#   ios: true
+#   image_path: "assets/images/versify_logo_v2.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
