Fix pickTopics image flash

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,7 +80,7 @@ flutter_icons:
   image_path: "assets/images/versify_icon_v3.png"
 
 # For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+# following page: https://dart.dev/tools/pub/pubspec`
 
 # The following section is specific to Flutter.
 flutter:
@@ -88,6 +88,7 @@ flutter:
   assets:
    - assets/images/
    - assets/images/backgrounds/
+   - assets/images/backgrounds/r-joy_background.jpg/
  
 
   fonts:
