--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   webview_flutter: ^2.0.12
   scrollable_positioned_list: ^0.1.10
   ansicolor: ^2.0.1
+  # lint: ^1.5.3
   # esys_flutter_share: ^1.0.2
   # scroll_bottom_navigation_bar: 
   # skeleton_loader: 
