--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   scrollable_positioned_list: ^0.1.10
   ansicolor: ^2.0.1
   lint: ^1.5.3
+  flutter_facebook_login: ^3.0.0
   # esys_flutter_share: ^1.0.2
   # scroll_bottom_navigation_bar: 
   # skeleton_loader: 
