Sprint 1: [CREATED] Forgot password user interface v1.0 && [CREATED] Forgot password open inbox v1.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   ansicolor: ^2.0.1
   lint: ^1.5.3
   flutter_facebook_login: ^3.0.0
+  open_mail_app: ^0.4.1
   # esys_flutter_share: ^1.0.2
   # scroll_bottom_navigation_bar: 
   # skeleton_loader: 
