--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shared_preferences: ^2.0.5
   vibration: ^1.7.3
   url_launcher: ^6.0.4
+  # intl_phone_number_input: 
+  #   path: ./modified_intl_phone_number_input-0.7.0+2/
   intl_phone_number_input: ^0.7.0+2
   http: ^0.13.3
   xml: ^5.1.0
