--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   overlay_support: ^1.2.1
   image_picker: ^0.8.0+3
   webview_flutter: ^2.0.12
+  change_app_package_name: ^1.0.0
+
   # esys_flutter_share: ^1.0.2
   # scroll_bottom_navigation_bar: 
   # skeleton_loader: 
@@ -62,23 +64,16 @@ dependencies:
   # phone_number: ^0.10.0
   # flutter_cache_manager:
 
-    
-
-  
-  
-  
-
-
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
-
+  flutter_lints: ^1.0.0
+   
 flutter_icons:
   android: true
   ios: true
   image_path: "assets/images/purple_square_v1.png"
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec`
