--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,43 +18,44 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  # sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   
-  font_awesome_flutter: ^8.8.1
+  font_awesome_flutter:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons:
-  flutter_icons:
+  # flutter_icons:
   flutter_launcher_icons: 
   flutter_spinkit: 
   google_fonts:
-  google_sign_in: ^5.0.3
-  firebase_auth: ^1.2.0
-  cloud_firestore: ^2.2.0
-  firebase_storage: ^8.1.0
-  firebase_core: ^1.2.0
-  firebase_dynamic_links: ^2.0.4
-  firebase_messaging: ^10.0.0
-  provider: ^5.0.0
+  google_sign_in: ^6.2.1
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  firebase_storage: ^11.6.0
+  firebase_core: ^2.24.2
+  firebase_dynamic_links: ^5.4.8
+  firebase_messaging: ^14.7.10
+  provider: ^6.1.2
   pull_to_refresh: ^2.0.0 
   shared_preferences: ^2.0.5
   vibration: ^1.7.3
   url_launcher: ^6.0.4
   intl_phone_number_input: ^0.7.0+2
-  http: ^0.13.3
-  xml: ^5.1.0
+  http: ^1.2.2
+  xml: ^6.5.0
   cached_network_image: ^3.0.0
   share: ^2.0.1
-  overlay_tutorial: ^2.0.1
+  overlay_tutorial: ^3.0.0
   shimmer_animation: ^2.0.0
-  overlay_support: ^1.2.1
-  image_picker: ^0.8.0+3
-  webview_flutter: ^2.0.12
+  overlay_support: ^2.1.0
+  image_picker: ^1.1.2
+  webview_flutter: ^4.8.0
   change_app_package_name: ^1.0.0
 
   # esys_flutter_share: ^1.0.2
@@ -67,7 +68,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^4.0.0
    
 flutter_icons:
   android: true
